# python-sdk

./: .gitignore  README.md  pyproject.toml
.github/scripts/: codegen-check.sh
.github/workflows/: ci.yml  release.yml
.trix/client-lib/: README.md.hbs  __init__.py.hbs  requirements.txt.hbs
bindgen/: __init__.py.hbs  requirements.txt.hbs
sdk/: .gitignore  pyproject.toml  requirements.txt
sdk/src/tx3_sdk/: __init__.py  errors.py
sdk/src/tx3_sdk/core/: args.py  bytes.py
sdk/src/tx3_sdk/facade/: __init__.py  builder.py  client.py  client_builder.py  errors.py  party.py  poll.py  profile.py  resolved.py
sdk/src/tx3_sdk/signer/: __init__.py  cardano.py  ed25519.py  errors.py  signer.py  witness.py
sdk/src/tx3_sdk/tii/: __init__.py  errors.py  param_type.py  protocol.py
sdk/src/tx3_sdk/trp/: client.py  errors.py
sdk/tests/: test_add_witness.py  test_args.py  test_codegen.py  test_errors.py  test_facade.py  test_integration.py  test_param_type.py  test_signer.py  test_tii.py  test_trp.py
sdk/tests/e2e/: test_happy_path.py
sdk/tests/integration/: test_happy_path.py
sdk/tx3_sdk/: __init__.py  trp.py
src/tx3_sdk/: __init__.py
src/tx3_sdk/core/: __init__.py
src/tx3_sdk/facade/: __init__.py  client.py  errors.py  resolved.py  signed.py  submitted.py
src/tx3_sdk/signer/: __init__.py  ed25519.py  signer.py
src/tx3_sdk/tii/: errors.py  invocation.py
src/tx3_sdk/trp/: __init__.py  spec.py
tests/: test_integration.py  test_tii.py
tx3_trp/: __init__.py  client.py
