[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tx3-sdk"
version = "0.2.0"
authors = [
    { name = "TxPipe", email = "hello@txpipe.io" },
]
description = "TX3 SDK"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "httpx>=0.18.0",
]

[project.urls]
"Homepage" = "https://github.com/tx3-lang/python-sdk"
"Bug Tracker" = "https://github.com/tx3-lang/python-sdk/issues"

[tool.setuptools]
packages = [
    "tx3_sdk"
]